--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
-#The application host name
+#The services host name
 HOST=localhost
-#The application port to get access from the docker container
+#The services port to get access from the docker container
 PORT=3000
 
 #Parameters for getting the access to the database
@@ -15,7 +15,7 @@ DB_PORT=3306
 COMPOSE_USER_ID=ruhul.vivasoft
 COMPOSE_GROUP_ID=17942803401794280340
 
-#The application and the database will be accessible from the host machine on these ports
+#The services and the database will be accessible from the host machine on these ports
 EXPOSE_PORT=3000
 EXPOSE_DB_PORT=3306
 EXPOSE_PHPMYADMIN_PORT=8081
